--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,10 @@
         android:theme="@style/Theme.CriminalIntentApp"
         tools:targetApi="31">
         <activity
+        android:name=".CriminalIntentApplication"
+        android:allowBackup="true"/>
+
+        <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
@@ -22,5 +26,6 @@
             </intent-filter>
         </activity>
     </application>
+
 
 </manifest>
